Initial project setup

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
-name = "TODO_CRATE_NAME"
+name = "ances-tree"
 version = "0.0.1"
 authors = ["Tamme Schichler <tamme@schichler.dev>"]
 edition = "2018"
 description = "TODO_DESCRIPTION"
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/Tamschi/TODO_CRATE_NAME"
-homepage = "https://github.com/Tamschi/TODO_CRATE_NAME/tree/v0.0.1"
-documentation = "https://docs.rs/TODO_CRATE_NAME/0.0.1"
+repository = "https://github.com/Tamschi/ances-tree"
+homepage = "https://github.com/Tamschi/ances-tree/tree/v0.0.1"
+documentation = "https://docs.rs/ances-tree/0.0.1"
 keywords = [] #TODO
 categories = [] #TODO
 readme = "README.md"
@@ -26,8 +26,8 @@ resolver = "2"
 publish = false
 
 [badges]
-is-it-maintained-issue-resolution = { repository = "Tamschi/TODO_CRATE_NAME" }
-is-it-maintained-open-issues = { repository = "Tamschi/TODO_CRATE_NAME" }
+is-it-maintained-issue-resolution = { repository = "Tamschi/ances-tree" }
+is-it-maintained-open-issues = { repository = "Tamschi/ances-tree" }
 maintenance = { status = "experimental" } # This may differ between branches.
 
 [dev-dependencies]
