--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,4 +39,6 @@ wasm-bindgen-test = "0.3.28"
 
 [dependencies]
 tap = "1.0.1"
-triomphe = "0.1.3"
+tiptoe = { features = ["sync"], version = "0.0.2" }
+
+[features]
